force-app/main/default/objects/Image__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>where we are using in Community</description>
    <label>Display Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>