force-app/main/default/objects/Image__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>kown the Source of Image</description>
    <label>Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>