force-app/main/default/objects/Image__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>here we can store URL</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>